# EMMA

./: .gitignore  README.md  pyproject.toml
configs/: analysis.yaml  base_emma.yaml  dev.yaml  door_key_change.yaml  dp_no_poi.yaml  dp_poi_disagreement_diayn.yaml  dp_poi_disagreement_ir.yaml  dp_poi_disagreement_ir_emb.yaml  emma.yaml  fm_no_poi.yaml  fm_poi_disagreement_diayn.yaml  fm_poi_disagreement_ir.yaml  fm_poi_disagreement_ir_emb.yaml  key_prediction.yaml  kp_expl_diayn.yaml  kp_expl_intrinsic_reward.yaml  kp_no_poi.yaml  kp_poi_disagreement.yaml  kp_poi_disagreement_diayn.yaml  kp_poi_disagreement_ir.yaml  kp_poi_disagreement_ir_emb.yaml  kp_poi_grad.yaml  kp_poi_grad_diayn.yaml  kp_poi_loss.yaml  pm_expl_intrinsic_reward.yaml  pm_no_poi.yaml  pm_poi_disagreement.yaml  pm_poi_disagreement_diayn.yaml  pm_poi_disagreement_ir.yaml  pm_poi_disagreement_ir_emb.yaml  pm_poi_grad.yaml  poi_disagreement.yaml  poi_grad.yaml  poi_loss.yaml  policy_model.yaml  pp_no_poi.yaml  pp_poi_disagreement_diayn.yaml  pp_poi_disagreement_ir.yaml  pp_poi_disagreement_ir_emb.yaml  walker.yaml  (+9 more)
configs/model_trainer/: direction_prediction.yaml  forward_model.yaml  key_prediction.yaml  policy.yaml  position_prediction.yaml
configs/poi_emb_learner/: diayn_skill_manager.yaml  sampling_poi_emb.yaml  skill_manager.yaml
emma/: __init__.py  experiment.py  external_model.py  poi_exploration.py  poi_field.py  poi_wrapper.py  state_samplers.py
emma/envs/: __init__.py  (+1 more)
old_configs/: door_key_change.yaml
plotting/: main.py  plot_losses.py  plot_metric.py
scripts/: activate.sh  run.sh
(+9 files in other folders)
